Add DMG macOS package